infra/k8s/monitoring/minio/overlays/production/HTTPRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-httproute
  namespace: monitoring-minio
spec:
  parentRefs:
  - name: main-gateway
    namespace: kube-system
    sectionName: https-minio-wildcard
  hostnames:
  - monitoring.minio.codedang.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio-console
      port: 9090
